--- a/index.html
+++ b/index.html
@@ -25,6 +25,53 @@
             <div class="legal-text">Free trial for new and eligible returning subscribers only.</div>
         </div>
     </header>
+    <section class="sub-header">
+        <img src="logos.png">
+        <div>
+            <h4>Bundle with any Hulu plan & save</h4>
+            <h3>Get Hulu, Disney+, and ESPN+.</h3>
+            <a href="#" class="sub-link">Details</a>
+        </div>
+        <div>
+            <a href="#" class="btn btn-outline">Get Bundle</a>
+            <a href="#" class="sub-link">Terms apply</a>
+        </div>
+    </section>
+    <section class="categories">
+        <h4>Included in all plans</h4>
+        <div class="text-xl">All The TV You Love</div>
+        <div class="sub-text">Stream full seasons of exclusive series, current-season episodes, hit movies, Hulu Originals, kids shows, and more.</div>
+        <div class="covers">
+            <div class="cover-1">
+                <div class="cover-grid"></div>
+                <div class="cover-text">
+                    <div class="sub-title">Past & Current Seasons</div>
+                    <h3>TV Shows</h3>
+                </div>
+            </div>
+            <div class="cover-1">
+                <div class="cover-grid"></div>
+                <div class="cover-text">
+                    <div class="sub-title">Past & Current Seasons</div>
+                    <h3>TV Shows</h3>
+                </div>
+            </div>
+            <div class="cover-1">
+                <div class="cover-grid"></div>
+                <div class="cover-text">
+                    <div class="sub-title">Past & Current Seasons</div>
+                    <h3>TV Shows</h3>
+                </div>
+            </div>
+            <div class="cover-1">
+                <div class="cover-grid"></div>
+                <div class="cover-text">
+                    <div class="sub-title">Past & Current Seasons</div>
+                    <h3>TV Shows</h3>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="main.js"></script>
     
 </body>
