--- a/index.html
+++ b/index.html
@@ -72,6 +72,38 @@
             </div>
         </div>
     </section>
+    <section class="live">
+        <div class="live-border">
+            <h4>Hulu + Live TV</h4>
+            <div class="text-xl">Live TV Makes It Better</div>
+            <div class="sub-text">Make the switch from cable. Get 75+ top channels with your favourite live sports, news,
+                and events - plus the entire Hulu streaming library.</div>
+            <div class="legal-text">Live Tv plan required. Regional restrictions, blackouts and additional terms apply. see details</div>
+            <a href="#">View Channels in Your Area</a>
+        </div>
+    </section>
+    <section class="live-sports">
+        <div class="live-sports-content">
+            <div class="text-xl">Live Sports</div>
+            <div class="sub-text">Catch your games at home or on the go. Stream live games from major college and pro leagues
+            including the NCCA, NBA, NHL, NFL, and more.</div>
+            <div class="live-sports-logos">
+                <div>
+                    <img src="live-sports-logo-1.png">
+                </div>
+                <div>
+                    <img src="live-sports-logo-2.png">
+                </div>
+                <div>
+                    <img src="live-sports-logo-3.svg">
+                </div>
+                <div>
+                    <img src="live-sports-logo-4.png">
+                </div>
+            </div>
+            <div class="legal-text">Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details</div>
+        </div>
+    </section>
     <script src="main.js"></script>
     
 </body>
