--- a/index.html
+++ b/index.html
@@ -104,6 +104,78 @@
             <div class="legal-text">Live TV plan required. Regional restrictions, blackouts and additional terms apply. See details</div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-lists">
+                <ul>
+                    <li class="list-head">BROWSE</li>
+                    <li><a href="#">Streaming Library</a></li>
+                    <li><a href="#">Live TV</a></li>
+                    <li><a href="#">Live News</a></li>
+                    <li><a href="#">Live Sports</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">TV Shows</a></li>
+                    <li><a href="#">Movies</a></li>
+                    <li><a href="#">Originals</a></li>
+                    <li><a href="#">Networks</a></li>
+                    <li><a href="#">Kids</a></li>
+                    <li><a href="#">FX on Hulu</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Hulu, Disney+, and ESPN+</a></li>
+                    <li><a href="#">Disney Bundle</a></li>
+                    <li><a href="#">HBO Max</a></li>
+                    <li><a href="#">Cinimax</a></li>
+                    <li><a href="#">Showtime</a></li>
+                    <li><a href="#">STARZ</a></li>
+                </ul>
+                <ul>
+                    <li class="list-head">HELP</li>
+                    <li><a href="#">Account & Billing</a></li>
+                    <li><a href="#">Plans & Pricing</a></li>
+                    <li><a href="#">Supported Devices</a></li>
+                    <li><a href="#">Accesibility</a></li>
+                </ul>
+                <ul>
+                    <li class="list-head">ABOUT US</li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Jobs</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="divider"></div>
+            <div class="social-icons">
+                <a href="#"><img src="facebook.svg"></a>
+                <a href="#"><img src="twitter.svg"></a>
+                <a href="#"><img src="youtube.svg"></a>
+                <a href="#"><img src="instagram.svg"></a>
+            </div>
+        </div>
+    </footer>
+    <div class="modal">
+        <div class="modal-box">
+            <div class="modal-body">
+                <h3>Log In</h3>
+                <form>
+                    <div class="form-control">
+                        <label for="email">Email</label>
+                        <input type="email" id="email">
+                    </div>
+                    <div class="form-control">
+                        <label for="password">Password</label>
+                        <input type="password" id="password">
+                    </div>
+                    <p><a href="#">Forgot your email or password</a></p>
+                    <button class="btn btn-dark">Log In</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <p>Don't have an account? <a href="#">Start your free trial</a></p>
+            </div>
+            <img class="close" src="close.svg" alt="close">
+        </div>
+    </div>
     <script src="main.js"></script>
     
 </body>
